--- a/css/logreg.css
+++ b/css/logreg.css
@@ -3,13 +3,13 @@ html, body, .form_container {
 }
 
 .form_container {
-    display: -ms-flexbox;
-    display: -webkit-flex;
+	display: -ms-flexbox;
+	display: -webkit-flex;
 	display: flex;
 	
 	top: 50%;
-    -ms-flex-align: center;
-    align-items: left;
+	-ms-flex-align: center;
+	align-items: left;
 	justify-content: center;
 	flex-direction: column;
 	-ms-flex-direction: column;
@@ -23,15 +23,15 @@ html, body, .form_container {
 
 	width: 25%;
 	min-width: 240px;
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    box-shadow: 0px 0px 20px 10px #E0E0E0;
-    border-radius: 5px;
-    padding: 20px 20px;
+	border: 1px solid rgba(255, 255, 255, 0.5);
+	box-shadow: 0px 0px 20px 10px #E0E0E0;
+	border-radius: 5px;
+	padding: 20px 20px;
 }
 
 .form_subtitle {
-    font-size: 30px;
-    text-align: left;
+	font-size: 30px;
+	text-align: left;
 	
 	margin-top: 10px;
 	margin-bottom: 20px;
@@ -57,9 +57,9 @@ html, body, .form_container {
 }
 
 .form_label{
-	margin-bottom: 5px;
+	margin-bottom: 0px;
 	font-size: 20px;
-    text-align: left;
+	text-align: left;
 }
 
 #new_user{
@@ -69,36 +69,36 @@ html, body, .form_container {
 }
 
 .wrong_msg {
-    font-size: 15px;
+	font-size: 15px;
 	color: red;
 	
 	display: block;
 
 	padding-bottom: 8px;
-	padding-left: 2px;
+	padding-left: 8px;
 
-	visibility: visible;
+	visibility: hidden;
 }
 
 #form_button {
-    background-color: #32beda;
-    border: none;
-    border-radius: 5px;
-    width: 100%;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
+	background-color: #32beda;
+	border: none;
+	border-radius: 5px;
+	width: 100%;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 20px;
 }
 
 #register {
-    font-size: 17px;
-    padding: 1px 15px;
-    text-align: center;
+	font-size: 17px;
+	padding: 1px 15px;
+	text-align: center;
 }
 
 p > b > a{
-    color: rgb(27, 131, 228);
+	color: rgb(27, 131, 228);
 }
